--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,15 @@
   "$schema": "https://json.schemastore.org/eslintrc",
   "root": true,
   "extends": [
+    "airbnb",
+    "airbnb-typescript",
+    "airbnb/hooks",
     "next/core-web-vitals",
     "prettier",
+    "plugin:prettier/recommended",
     "plugin:tailwindcss/recommended"
   ],
-  "plugins": ["tailwindcss"],
+  "plugins": ["react", "prettier", "tailwindcss"],
   "rules": {
     "@next/next/no-html-link-for-pages": "off",
     "react/jsx-key": "off",
