--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@mantine/hooks": "^6.0.15",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.15",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.4.0",
