--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@anatine/zod-mock": "^3.13.1",
+    "@faker-js/faker": "^8.0.2",
     "@hookform/resolvers": "^3.1.1",
     "@mantine/carousel": "^6.0.15",
     "@mantine/hooks": "^6.0.15",
@@ -22,6 +24,7 @@
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
