--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mantine/carousel": "^6.0.15",
     "@mantine/hooks": "^6.0.15",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
