--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-paginate": "^8.2.0",
     "react-use-websocket": "^4.3.1",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
